<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- All the Strings for the game buttons and textviews defaults are here -->
    <string name="app_name">Project_Math_Game</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Android Math Game</string>
    <string name="start_game_label">Start Game</string>
    <string name="high_score_label">High Score Page</string>
    <string name="options_label">Options</string>
    <string name="help_label">Help</string>
    <string name="exit_label">Exit</string>
    <string name="start_game_activity_title">Start Game</string>
    <string name="help_activity_title">Game Help</string>
    <string name="high_score_activity_title">High Score Page</string>
    <string name="options_activity_title">Game Options</string>
    <string name="label_keypad_1">1</string>
    <string name="label_keypad_2">2</string>
    <string name="label_keypad_3">3</string>
    <string name="label_keypad_4">4</string>
    <string name="label_keypad_5">5</string>
    <string name="label_keypad_6">6</string>
    <string name="label_keypad_7">7</string>
    <string name="label_keypad_8">8</string>
    <string name="label_keypad_9">9</string>
    <string name="label_keypad_0">0</string>
    <string name="label_keypad_period">.</string>
    <string name="label_keypad_backspace">&lt;-- BS</string>
    <string name="label_keypad_clear_completely">CC</string>
    <string name="label_keypad_enter">Enter</string>
    <string name="label_timer">Timer:</string>
    <string name="label_math_question">Math Question Here</string>
    <string name="label_main_menu_return">Back To Main Menu</string>
    <string name="label_submit_to_high_score">Submit To High Score</string>
    <string name="label_initials_input_explain">Initials input:</string>
    <string name="label_hint_for_results">Only 6 letters and digits allowed.</string>
    <string name="label_keypad_minus">- (minus)</string>
    <string name="label_keypad_plus">+ (plus)</string>
    <string name="results_activity_title">Results Screen</string>
    <string name="label_game_score">0</string>
    <string name="label_answer_status">Answer Question Status</string>
    <string name="label_question_number_amount">Enter Question\nNumber Amount</string>
    <string name="label_question_type">Enter Question\nGame Type</string>
    <string name="label_menu_return">Back To\nMain Menu</string>
    <string name="label_math_game_Type">Enter Gameplay\nType</string>
    <string name="label_Gameplayinitials">Initials</string>
    <string name="label_GameplayNumbers">Nums</string>
    <string name="label_GameplayType">Type</string>
    <string name="label_GameplayTotal">Total</string>
    <string name="label_GameplayRight">Right</string>
    <string name="label_GameplayScore">Score</string>
    <string name="label_help_menu">This game is to teach people how to do math better.\n\nTo play the game there are some things to note.\n\nYou may enter only 1 decimal place, so once you calculate the answer fully you must round it to 1 decimal place.\n\n.05 and up are rounded up to a .1 and all less are rounded down to .0.\n\nTimed mode is the only mode with scoring.\n\nPractice mode allows you to practice only 10 questions at a time.\n\n</string>

</resources>
