<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/main_title" />

    <Button
        android:id="@+id/buttonQuestionNumberAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_question_number_amount" />

    <Button
        android:id="@+id/buttonQuestionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_question_type" />

    <Button
        android:id="@+id/buttonMathGameplayType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/label_math_game_Type" />

    <Button
        android:id="@+id/menuReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_menu_return" />

</LinearLayout>